# alias-cd

./: README.md  bash_wrapper.sh  setup.cfg  tox.ini
.github/workflows/: release.yml  tests.yml
src/alias_cd/: __init__.py  cli.py  config.py
tests/: test_config.py
