[metadata]
name = alias-cd
description = A CLI to help give aliases to directories
version = attr: alias_cd.__version__
author = Ben Mitchell
license = MIT
license_file = LICENSE
platforms = unix, linux, osx 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    alias_cd
install_requires =
    typer==0.4.0
    pyyaml==6.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

linting =
    mypy>=0.910
    flake8>=3.9

formatting =
    black==21.12b0

[options.package_data]
alias_cd = py.typed

[flake8]
max-line-length = 80